--- a/DI_pipeline/uGMRT_DI_calibration_pipeline/readme
+++ b/DI_pipeline/uGMRT_DI_calibration_pipeline/readme
@@ -1,1 +1,2 @@
-This folder contains all the py files
+This folder contains all the py files.
+A tar version, containing all of these are also uploaded.
